<resources>
    <string name="app_name">Cricket App</string>
    <string name="matches">Matches</string>
    <string name="title_activity_team_stats">Team Statistics</string>
    <string name="captain">C</string>
    <string name="wicket_keeper">WK</string>
    <string name="batting">Batting</string>
    <string name="style">Style : %s</string>
    <string name="average">Average : %s</string>
    <string name="strike_rate">Strike Rate : %s</string>
    <string name="runs">Runs : %s</string>
    <string name="bowling">Bowling</string>
    <string name="economy_rate">Economy Rate : %s</string>
    <string name="wickets">Wickets : %s</string>
    <string name="close">Close</string>
    <string name="player_name">%s</string>
    <string name="player_position">Position : %s</string>
    <string-array name="filter_option">
        <item>All Teams</item>
        <item>Team A</item>
        <item>Team B</item>
    </string-array>
</resources>